--- a/WebAPISqlDependencyDemo/WebAPISqlDependencyDemo.csproj
+++ b/WebAPISqlDependencyDemo/WebAPISqlDependencyDemo.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NSwag.AspNetCore" Version="13.11.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
